--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,18 @@
 services:
+  cloudflared:
+    container_name: cloudflared
+    image: cloudflare/cloudflared
+    restart: unless-stopped
+    command: tunnel run
+    environment:
+      TUNNEL_TOKEN: $TUNNEL_TOKEN
+    extra_hosts:
+      - host.docker.internal:host-gateway
+
   home-assistant:
     container_name: home-assistant
-    restart: unless-stopped
     image: ghcr.io/home-assistant/home-assistant:stable
+    restart: unless-stopped
     privileged: true
     network_mode: host
     devices:
@@ -13,8 +23,8 @@ services:
       - /run/dbus:/run/dbus:ro
 
   music-assistant-server:
-    image: ghcr.io/music-assistant/server:latest # <<< Desired release version here (or use beta to get the latest beta version)
     container_name: music-assistant-server
+    image: ghcr.io/music-assistant/server:latest # <<< Desired release version here (or use beta to get the latest beta version)
     restart: unless-stopped
     # Network mode must be set to host for MA to work correctly
     network_mode: host
