--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   cloudflared:
     container_name: cloudflared
-    image: cloudflare/cloudflared
+    image: cloudflare/cloudflared:2024.11.1
     restart: unless-stopped
     command: tunnel run
     environment:
@@ -11,7 +11,7 @@ services:
 
   home-assistant:
     container_name: home-assistant
-    image: ghcr.io/home-assistant/home-assistant:stable
+    image: ghcr.io/home-assistant/home-assistant:2024.12.1
     restart: unless-stopped
     privileged: true
     network_mode: host
@@ -24,7 +24,7 @@ services:
 
   music-assistant-server:
     container_name: music-assistant-server
-    image: ghcr.io/music-assistant/server:latest # <<< Desired release version here (or use beta to get the latest beta version)
+    image: ghcr.io/music-assistant/server:2.3.3
     restart: unless-stopped
     # Network mode must be set to host for MA to work correctly
     network_mode: host
