--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     command: tunnel run
     environment:
-      TUNNEL_TOKEN: $TUNNEL_TOKEN
+      TUNNEL_TOKEN: $CLOUDFLARED_TUNNEL_TOKEN
     extra_hosts:
       - host.docker.internal:host-gateway
 
@@ -15,12 +15,22 @@ services:
     restart: unless-stopped
     privileged: true
     network_mode: host
-    devices:
-      - /dev/ttyUSB0:/dev/ttyUSB0
     volumes:
       - /home/pi/docker/home-assistant/config:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
+
+  mosquitto:
+    container_name: mosquitto
+    image: eclipse-mosquitto:2.0.20
+    restart: unless-stopped
+    ports:
+        - 1883:1883
+        - 1884:1884
+    volumes:
+      - /home/pi/docker/mosquitto/config:/mosquitto/config
+      - /home/pi/docker/mosquitto/data:/mosquitto/data
+      - /home/pi/docker/mosquitto/log:/mosquitto/log
 
   music-assistant-server:
     container_name: music-assistant-server
@@ -40,3 +50,21 @@ services:
       # Provide logging level as environment variable.
       # default=info, possible=(critical, error, warning, info, debug)
       - LOG_LEVEL=info
+
+  zigbee2mqtt:
+    container_name: zigbee2mqtt
+    image: ghcr.io/koenkk/zigbee2mqtt:1.42.0
+    restart: unless-stopped
+    volumes:
+      - /home/pi/docker/zigbee2mqtt/data:/app/data
+      - /run/udev:/run/udev:ro
+    ports:
+      # Frontend port
+      - 8080:8080
+    environment:
+      - ZIGBEE2MQTT_CONFIG_MQTT_USER=$ZIGBEE2MQTT_CONFIG_MQTT_USER
+      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD=$ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD
+      - TZ=Europe/London
+    devices:
+      # Make sure this matched your adapter location
+      - /dev/serial/by-id/usb-Nabu_Casa_Home_Assistant_Connect_ZBT-1_eea67b52ae39ef119e3e57f454516304-if00-port0:/dev/ttyUSB0
