--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "cSpell.words": [
     "cloudflared"
+  ],
+  "yaml.customTags": [
+    "!env_var",
+    "!include_dir_merge_named",
+    "!secret"
   ]
 }
