--- a/config/mosquitto/config/mosquitto.conf
+++ b/config/mosquitto/config/mosquitto.conf
@@ -1,5 +1,5 @@
 allow_anonymous false
-password_file /mosquitto/config/passwd
+password_file /mosquitto/passwd
 
 persistence true
 persistence_location /mosquitto/data/
