--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,10 +27,16 @@ services:
     ports:
         - 1883:1883
         - 1884:1884
+    environment:
+      - HA_CONFIG_MQTT_USER
+      - HA_CONFIG_MQTT_PASSWORD
+      - ZIGBEE2MQTT_CONFIG_MQTT_USER
+      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD
     volumes:
       - /home/pi/docker/mosquitto/config:/mosquitto/config
       - /home/pi/docker/mosquitto/data:/mosquitto/data
       - /home/pi/docker/mosquitto/log:/mosquitto/log
+      - /home/pi/docker/mosquitto/entrypoint.sh:/docker-entrypoint.sh
 
   music-assistant-server:
     container_name: music-assistant-server
@@ -58,12 +64,9 @@ services:
     volumes:
       - /home/pi/docker/zigbee2mqtt/data:/app/data
       - /run/udev:/run/udev:ro
-    ports:
-      # Frontend port
-      - 8080:8080
     environment:
-      - ZIGBEE2MQTT_CONFIG_MQTT_USER=$ZIGBEE2MQTT_CONFIG_MQTT_USER
-      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD=$ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD
+      - ZIGBEE2MQTT_CONFIG_MQTT_USER
+      - ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD
       - TZ=Europe/London
     devices:
       # Make sure this matched your adapter location
