--- a/config/home-assistant/config/configuration.yaml
+++ b/config/home-assistant/config/configuration.yaml
@@ -9,6 +9,9 @@ automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
 
+homeassistant:
+  packages: !include_dir_named packages
+
 http:
   use_x_forwarded_for: true
   trusted_proxies:
