--- a/config/home-assistant/config/configuration.yaml
+++ b/config/home-assistant/config/configuration.yaml
@@ -4,6 +4,8 @@ default_config:
 # Load frontend themes from the themes folder
 frontend:
   themes: !include_dir_merge_named themes
+  extra_js_url_es5:
+    - https://dagammla.gitlab.io/keep-silk-open/keep.js
 
 automation: !include automations.yaml
 script: !include scripts.yaml
