--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
-    rev: v9.18.0
+    rev: v9.20.0
     hooks:
       - id: commitlint
         stages: [commit-msg]
@@ -10,7 +10,7 @@ repos:
     hooks:
       - id: editorconfig-checker
   - repo: https://github.com/rhysd/actionlint
-    rev: v1.7.4
+    rev: v1.7.6
     hooks:
       - id: actionlint
   - repo: https://github.com/igorshubovych/markdownlint-cli
@@ -44,3 +44,7 @@ repos:
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys]
       - id: trailing-whitespace
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.23.0
+    hooks:
+      - id: gitleaks
