--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,14 @@
 services:
+  aiostreams:
+    container_name: aiostreams
+    image: ghcr.io/viren070/aiostreams:v1.11.4
+    restart: unless-stopped
+    environment:
+      SECRET_KEY: $AIOSTREAMS_SECRET_KEY
+
   cloudflared:
     container_name: cloudflared
-    image: cloudflare/cloudflared:2024.12.2
+    image: cloudflare/cloudflared:2025.1.0
     restart: unless-stopped
     command: tunnel run
     environment:
@@ -11,7 +18,7 @@ services:
 
   home-assistant:
     container_name: home-assistant
-    image: ghcr.io/home-assistant/home-assistant:2024.12.5
+    image: ghcr.io/home-assistant/home-assistant:2025.1.4
     restart: unless-stopped
     privileged: true
     network_mode: host
@@ -40,7 +47,7 @@ services:
 
   music-assistant-server:
     container_name: music-assistant-server
-    image: ghcr.io/music-assistant/server:2.3.4
+    image: ghcr.io/music-assistant/server:2.3.6
     restart: unless-stopped
     # Network mode must be set to host for MA to work correctly
     network_mode: host
