--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,12 @@ services:
     environment:
       SECRET_KEY: $AIOSTREAMS_SECRET_KEY
 
+  # bumper:
+  #   container_name: bumper
+  #   image: ghcr.io/mvladislav/bumper:sha-a39a705
+  #   restart: unless-stopped
+  #   platform: linux/arm64
+
   cloudflared:
     container_name: cloudflared
     image: cloudflare/cloudflared:2025.1.0
@@ -15,6 +21,14 @@ services:
       TUNNEL_TOKEN: $CLOUDFLARED_TUNNEL_TOKEN
     extra_hosts:
       - host.docker.internal:host-gateway
+
+  # hcpy:
+  #   container_name: hcpy
+  #   image: ghcr.io/hcpy2-0/hcpy:v0.1.6
+  #   restart: unless-stopped
+  #   command: /app/hc-login.py "$HC_USERNAME" "$HC_PASSWORD" config/devices.json
+  #   volumes:
+  #     - /home/pi/docker/hcpy/config:/app/config
 
   home-assistant:
     container_name: home-assistant
