--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,20 @@
 services:
+  aiostreams:
+    container_name: aiostreams
+    image: ghcr.io/viren070/aiostreams:v1.11.4
+    restart: unless-stopped
+    environment:
+      SECRET_KEY: $AIOSTREAMS_SECRET_KEY
+
+  # bumper:
+  #   container_name: bumper
+  #   image: ghcr.io/mvladislav/bumper:sha-a39a705
+  #   restart: unless-stopped
+  #   platform: linux/arm64
+
   cloudflared:
     container_name: cloudflared
-    image: cloudflare/cloudflared:2024.12.2
+    image: cloudflare/cloudflared:2025.1.0
     restart: unless-stopped
     command: tunnel run
     environment:
@@ -9,9 +22,17 @@ services:
     extra_hosts:
       - host.docker.internal:host-gateway
 
+  # hcpy:
+  #   container_name: hcpy
+  #   image: ghcr.io/hcpy2-0/hcpy:v0.1.6
+  #   restart: unless-stopped
+  #   command: /app/hc-login.py "$HC_USERNAME" "$HC_PASSWORD" config/devices.json
+  #   volumes:
+  #     - /home/pi/docker/hcpy/config:/app/config
+
   home-assistant:
     container_name: home-assistant
-    image: ghcr.io/home-assistant/home-assistant:2024.12.5
+    image: ghcr.io/home-assistant/home-assistant:2025.1.4
     restart: unless-stopped
     privileged: true
     network_mode: host
@@ -40,7 +61,7 @@ services:
 
   music-assistant-server:
     container_name: music-assistant-server
-    image: ghcr.io/music-assistant/server:2.3.4
+    image: ghcr.io/music-assistant/server:2.3.6
     restart: unless-stopped
     # Network mode must be set to host for MA to work correctly
     network_mode: host
