--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,8 +8,9 @@ updates:
       day: monday
     groups:
       docker:
-        patterns:
-          - '*'
+        update-types:
+          - minor
+          - patch
 
   - package-ecosystem: github-actions
     directories:
@@ -20,5 +21,6 @@ updates:
       day: monday
     groups:
       gha:
-        patterns:
-          - '*'
+        update-types:
+          - minor
+          - patch
