--- a/.github/workflows/digger-workflow.yaml
+++ b/.github/workflows/digger-workflow.yaml
@@ -8,8 +8,8 @@ on:
     types: [ opened, synchronize, closed ]
     paths:
       - terraform/**
-  schedule: ## 8am every week on Monday
-    - cron: '0 8 * * 1'
+  schedule: ## 5am every week on Saturday
+    - cron: "0 5 * * 6"
 
 jobs:
   digger-job:
