chore: rename docker-compose to compose

--- a/.github/workflows/dependabot-auto-merge.yaml
+++ b/.github/workflows/dependabot-auto-merge.yaml
@@ -6,7 +6,7 @@ on:
       - '.github/actions/**/*'
       - '.github/workflows/**/*'
       - 'terraform/**/.terraform.lock.hcl'
-      - 'docker-compose.yaml'
+      - 'compose.yaml'
 
 jobs:
   auto-merge:
